modify docs
