# go-server/docs/swagger.json
@@ -213,11 +213,13 @@
                 "operationId": "get-user-friends",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "ID of the user",
-                        "name": "userId",
-                        "in": "path",
-                        "required": true
+                        "description": "JSON request to get the friends of a user",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.GetUserFriendsRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -435,6 +437,17 @@
                 "friendId": {
                     "type": "string"
                 },
+                "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.GetUserFriendsRequest": {
+            "type": "object",
+            "required": [
+                "userId"
+            ],
+            "properties": {
                 "userId": {
                     "type": "string"
                 }
